// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Parser Definitions Tests > Definition Range includes Attributes 1`] = `
{
  "comments": [],
  "definitions": [
    {
      "attributes": [
        {
          "closeName": undefined,
          "colon": {
            "FullStart": 29,
            "Kind": 205,
            "Leading": [],
            "Length": 1,
            "Start": 29,
            "Text": ":",
            "Trailing": [
              {
                "FullStart": 30,
                "Kind": 601,
                "Leading": [],
                "Length": 1,
                "Start": 30,
                "Text": " ",
                "Trailing": [],
              },
            ],
          },
          "end": 48,
          "isAdd": false,
          "isDelete": false,
          "isIncomplete": false,
          "isLocal": false,
          "isReplace": false,
          "kind": 2,
          "name": {
            "end": 29,
            "isIncomplete": false,
            "kind": 3,
            "start": 24,
            "text": "Title",
            "tokens": [
              {
                "FullStart": 20,
                "Kind": 600,
                "Leading": [
                  {
                    "FullStart": 20,
                    "Kind": 601,
                    "Leading": [],
                    "Length": 4,
                    "Start": 20,
                    "Text": "    ",
                    "Trailing": [],
                  },
                ],
                "Length": 5,
                "Start": 24,
                "Text": "Title",
                "Trailing": [],
              },
            ],
          },
          "start": 24,
          "value": [
            {
              "end": 48,
              "kind": 4,
              "start": 31,
              "token": {
                "FullStart": 31,
                "Kind": 604,
                "Leading": [],
                "Length": 17,
                "Start": 31,
                "Text": ""My Tally Report"",
                "Trailing": [
                  {
                    "FullStart": 48,
                    "Kind": 6,
                    "Leading": [],
                    "Length": 1,
                    "Start": 48,
                    "Text": "
",
                    "Trailing": [],
                  },
                ],
              },
              "value": ""My Tally Report"",
            },
          ],
        },
      ],
      "closeBracket": {
        "FullStart": 18,
        "Kind": 101,
        "Leading": [],
        "Length": 1,
        "Start": 18,
        "Text": "]",
        "Trailing": [
          {
            "FullStart": 19,
            "Kind": 6,
            "Leading": [],
            "Length": 1,
            "Start": 19,
            "Text": "
",
            "Trailing": [],
          },
        ],
      },
      "closeType": undefined,
      "colon": {
        "FullStart": 8,
        "Kind": 205,
        "Leading": [],
        "Length": 1,
        "Start": 8,
        "Text": ":",
        "Trailing": [
          {
            "FullStart": 9,
            "Kind": 601,
            "Leading": [],
            "Length": 1,
            "Start": 9,
            "Text": " ",
            "Trailing": [],
          },
        ],
      },
      "complexObjects": [],
      "directives": [],
      "end": 48,
      "isAdd": false,
      "isDelete": false,
      "isIncomplete": false,
      "isLocal": false,
      "isReplace": false,
      "kind": 1,
      "modifier": undefined,
      "name": {
        "end": 18,
        "isIncomplete": false,
        "kind": 3,
        "start": 10,
        "text": "MyReport",
        "tokens": [
          {
            "FullStart": 10,
            "Kind": 600,
            "Leading": [],
            "Length": 8,
            "Start": 10,
            "Text": "MyReport",
            "Trailing": [],
          },
        ],
      },
      "nameCanonical": undefined,
      "openBracket": {
        "FullStart": 0,
        "Kind": 100,
        "Leading": [
          {
            "FullStart": 0,
            "Kind": 6,
            "Leading": [],
            "Length": 1,
            "Start": 0,
            "Text": "
",
            "Trailing": [],
          },
        ],
        "Length": 1,
        "Start": 1,
        "Text": "[",
        "Trailing": [],
      },
      "start": 1,
      "statements": [],
      "type": {
        "end": 8,
        "isIncomplete": false,
        "kind": 3,
        "start": 2,
        "text": "Report",
        "tokens": [
          {
            "FullStart": 2,
            "Kind": 600,
            "Leading": [],
            "Length": 6,
            "Start": 2,
            "Text": "Report",
            "Trailing": [],
          },
        ],
      },
    },
  ],
  "end": 49,
  "errors": [],
  "kind": 0,
  "lineOffsets": [
    0,
    1,
    20,
    49,
  ],
  "start": 0,
  "text": "
[Report: MyReport]
    Title: "My Tally Report"
",
  "tokens": [
    {
      "FullStart": 0,
      "Kind": 100,
      "Leading": [
        {
          "FullStart": 0,
          "Kind": 6,
          "Leading": [],
          "Length": 1,
          "Start": 0,
          "Text": "
",
          "Trailing": [],
        },
      ],
      "Length": 1,
      "Start": 1,
      "Text": "[",
      "Trailing": [],
    },
    {
      "FullStart": 2,
      "Kind": 600,
      "Leading": [],
      "Length": 6,
      "Start": 2,
      "Text": "Report",
      "Trailing": [],
    },
    {
      "FullStart": 8,
      "Kind": 205,
      "Leading": [],
      "Length": 1,
      "Start": 8,
      "Text": ":",
      "Trailing": [
        {
          "FullStart": 9,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 9,
          "Text": " ",
          "Trailing": [],
        },
      ],
    },
    {
      "FullStart": 10,
      "Kind": 600,
      "Leading": [],
      "Length": 8,
      "Start": 10,
      "Text": "MyReport",
      "Trailing": [],
    },
    {
      "FullStart": 18,
      "Kind": 101,
      "Leading": [],
      "Length": 1,
      "Start": 18,
      "Text": "]",
      "Trailing": [
        {
          "FullStart": 19,
          "Kind": 6,
          "Leading": [],
          "Length": 1,
          "Start": 19,
          "Text": "
",
          "Trailing": [],
        },
      ],
    },
    {
      "FullStart": 20,
      "Kind": 600,
      "Leading": [
        {
          "FullStart": 20,
          "Kind": 601,
          "Leading": [],
          "Length": 4,
          "Start": 20,
          "Text": "    ",
          "Trailing": [],
        },
      ],
      "Length": 5,
      "Start": 24,
      "Text": "Title",
      "Trailing": [],
    },
    {
      "FullStart": 29,
      "Kind": 205,
      "Leading": [],
      "Length": 1,
      "Start": 29,
      "Text": ":",
      "Trailing": [
        {
          "FullStart": 30,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 30,
          "Text": " ",
          "Trailing": [],
        },
      ],
    },
    {
      "FullStart": 31,
      "Kind": 604,
      "Leading": [],
      "Length": 17,
      "Start": 31,
      "Text": ""My Tally Report"",
      "Trailing": [
        {
          "FullStart": 48,
          "Kind": 6,
          "Leading": [],
          "Length": 1,
          "Start": 48,
          "Text": "
",
          "Trailing": [],
        },
      ],
    },
    {
      "FullStart": 49,
      "Kind": 1,
      "Leading": [],
      "Length": 0,
      "Start": 49,
      "Text": "",
      "Trailing": [],
    },
  ],
}
`;

exports[`Parser Definitions Tests > Parse Basic Definition 1`] = `
{
  "comments": [],
  "definitions": [
    {
      "attributes": [],
      "closeBracket": {
        "FullStart": 17,
        "Kind": 101,
        "Leading": [],
        "Length": 1,
        "Start": 17,
        "Text": "]",
        "Trailing": [],
      },
      "closeType": undefined,
      "colon": {
        "FullStart": 7,
        "Kind": 205,
        "Leading": [],
        "Length": 1,
        "Start": 7,
        "Text": ":",
        "Trailing": [
          {
            "FullStart": 8,
            "Kind": 601,
            "Leading": [],
            "Length": 1,
            "Start": 8,
            "Text": " ",
            "Trailing": [],
          },
        ],
      },
      "complexObjects": [],
      "directives": [],
      "end": 18,
      "isAdd": false,
      "isDelete": false,
      "isIncomplete": false,
      "isLocal": false,
      "isReplace": false,
      "kind": 1,
      "modifier": undefined,
      "name": {
        "end": 17,
        "isIncomplete": false,
        "kind": 3,
        "start": 9,
        "text": "MyReport",
        "tokens": [
          {
            "FullStart": 9,
            "Kind": 600,
            "Leading": [],
            "Length": 8,
            "Start": 9,
            "Text": "MyReport",
            "Trailing": [],
          },
        ],
      },
      "nameCanonical": undefined,
      "openBracket": {
        "FullStart": 0,
        "Kind": 100,
        "Leading": [],
        "Length": 1,
        "Start": 0,
        "Text": "[",
        "Trailing": [],
      },
      "start": 0,
      "statements": [],
      "type": {
        "end": 7,
        "isIncomplete": false,
        "kind": 3,
        "start": 1,
        "text": "Report",
        "tokens": [
          {
            "FullStart": 1,
            "Kind": 600,
            "Leading": [],
            "Length": 6,
            "Start": 1,
            "Text": "Report",
            "Trailing": [],
          },
        ],
      },
    },
  ],
  "end": 18,
  "errors": [],
  "kind": 0,
  "lineOffsets": [
    0,
  ],
  "start": 0,
  "text": "[Report: MyReport]",
  "tokens": [
    {
      "FullStart": 0,
      "Kind": 100,
      "Leading": [],
      "Length": 1,
      "Start": 0,
      "Text": "[",
      "Trailing": [],
    },
    {
      "FullStart": 1,
      "Kind": 600,
      "Leading": [],
      "Length": 6,
      "Start": 1,
      "Text": "Report",
      "Trailing": [],
    },
    {
      "FullStart": 7,
      "Kind": 205,
      "Leading": [],
      "Length": 1,
      "Start": 7,
      "Text": ":",
      "Trailing": [
        {
          "FullStart": 8,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 8,
          "Text": " ",
          "Trailing": [],
        },
      ],
    },
    {
      "FullStart": 9,
      "Kind": 600,
      "Leading": [],
      "Length": 8,
      "Start": 9,
      "Text": "MyReport",
      "Trailing": [],
    },
    {
      "FullStart": 17,
      "Kind": 101,
      "Leading": [],
      "Length": 1,
      "Start": 17,
      "Text": "]",
      "Trailing": [],
    },
    {
      "FullStart": 18,
      "Kind": 1,
      "Leading": [],
      "Length": 0,
      "Start": 18,
      "Text": "",
      "Trailing": [],
    },
  ],
}
`;

exports[`Parser Definitions Tests > Parse Definition with Attributes 1`] = `
{
  "comments": [],
  "definitions": [
    {
      "attributes": [
        {
          "closeName": undefined,
          "colon": {
            "FullStart": 29,
            "Kind": 205,
            "Leading": [],
            "Length": 1,
            "Start": 29,
            "Text": ":",
            "Trailing": [
              {
                "FullStart": 30,
                "Kind": 601,
                "Leading": [],
                "Length": 1,
                "Start": 30,
                "Text": " ",
                "Trailing": [],
              },
            ],
          },
          "end": 48,
          "isAdd": false,
          "isDelete": false,
          "isIncomplete": false,
          "isLocal": false,
          "isReplace": false,
          "kind": 2,
          "name": {
            "end": 29,
            "isIncomplete": false,
            "kind": 3,
            "start": 24,
            "text": "Title",
            "tokens": [
              {
                "FullStart": 20,
                "Kind": 600,
                "Leading": [
                  {
                    "FullStart": 20,
                    "Kind": 601,
                    "Leading": [],
                    "Length": 4,
                    "Start": 20,
                    "Text": "    ",
                    "Trailing": [],
                  },
                ],
                "Length": 5,
                "Start": 24,
                "Text": "Title",
                "Trailing": [],
              },
            ],
          },
          "start": 24,
          "value": [
            {
              "end": 48,
              "kind": 4,
              "start": 31,
              "token": {
                "FullStart": 31,
                "Kind": 604,
                "Leading": [],
                "Length": 17,
                "Start": 31,
                "Text": ""My Tally Report"",
                "Trailing": [
                  {
                    "FullStart": 48,
                    "Kind": 6,
                    "Leading": [],
                    "Length": 1,
                    "Start": 48,
                    "Text": "
",
                    "Trailing": [],
                  },
                ],
              },
              "value": ""My Tally Report"",
            },
          ],
        },
        {
          "closeName": undefined,
          "colon": {
            "FullStart": 57,
            "Kind": 205,
            "Leading": [],
            "Length": 1,
            "Start": 57,
            "Text": ":",
            "Trailing": [
              {
                "FullStart": 58,
                "Kind": 601,
                "Leading": [],
                "Length": 1,
                "Start": 58,
                "Text": " ",
                "Trailing": [],
              },
            ],
          },
          "end": 65,
          "isAdd": false,
          "isDelete": false,
          "isIncomplete": false,
          "isLocal": false,
          "isReplace": false,
          "kind": 2,
          "name": {
            "end": 57,
            "isIncomplete": false,
            "kind": 3,
            "start": 53,
            "text": "Form",
            "tokens": [
              {
                "FullStart": 49,
                "Kind": 600,
                "Leading": [
                  {
                    "FullStart": 49,
                    "Kind": 601,
                    "Leading": [],
                    "Length": 4,
                    "Start": 49,
                    "Text": "    ",
                    "Trailing": [],
                  },
                ],
                "Length": 4,
                "Start": 53,
                "Text": "Form",
                "Trailing": [],
              },
            ],
          },
          "start": 53,
          "value": [
            {
              "end": 65,
              "isIncomplete": false,
              "kind": 3,
              "start": 59,
              "text": "MyForm",
              "tokens": [
                {
                  "FullStart": 59,
                  "Kind": 600,
                  "Leading": [],
                  "Length": 6,
                  "Start": 59,
                  "Text": "MyForm",
                  "Trailing": [
                    {
                      "FullStart": 65,
                      "Kind": 6,
                      "Leading": [],
                      "Length": 1,
                      "Start": 65,
                      "Text": "
",
                      "Trailing": [],
                    },
                  ],
                },
              ],
            },
          ],
        },
      ],
      "closeBracket": {
        "FullStart": 18,
        "Kind": 101,
        "Leading": [],
        "Length": 1,
        "Start": 18,
        "Text": "]",
        "Trailing": [
          {
            "FullStart": 19,
            "Kind": 6,
            "Leading": [],
            "Length": 1,
            "Start": 19,
            "Text": "
",
            "Trailing": [],
          },
        ],
      },
      "closeType": undefined,
      "colon": {
        "FullStart": 8,
        "Kind": 205,
        "Leading": [],
        "Length": 1,
        "Start": 8,
        "Text": ":",
        "Trailing": [
          {
            "FullStart": 9,
            "Kind": 601,
            "Leading": [],
            "Length": 1,
            "Start": 9,
            "Text": " ",
            "Trailing": [],
          },
        ],
      },
      "complexObjects": [],
      "directives": [],
      "end": 65,
      "isAdd": false,
      "isDelete": false,
      "isIncomplete": false,
      "isLocal": false,
      "isReplace": false,
      "kind": 1,
      "modifier": undefined,
      "name": {
        "end": 18,
        "isIncomplete": false,
        "kind": 3,
        "start": 10,
        "text": "MyReport",
        "tokens": [
          {
            "FullStart": 10,
            "Kind": 600,
            "Leading": [],
            "Length": 8,
            "Start": 10,
            "Text": "MyReport",
            "Trailing": [],
          },
        ],
      },
      "nameCanonical": undefined,
      "openBracket": {
        "FullStart": 0,
        "Kind": 100,
        "Leading": [
          {
            "FullStart": 0,
            "Kind": 6,
            "Leading": [],
            "Length": 1,
            "Start": 0,
            "Text": "
",
            "Trailing": [],
          },
        ],
        "Length": 1,
        "Start": 1,
        "Text": "[",
        "Trailing": [],
      },
      "start": 1,
      "statements": [],
      "type": {
        "end": 8,
        "isIncomplete": false,
        "kind": 3,
        "start": 2,
        "text": "Report",
        "tokens": [
          {
            "FullStart": 2,
            "Kind": 600,
            "Leading": [],
            "Length": 6,
            "Start": 2,
            "Text": "Report",
            "Trailing": [],
          },
        ],
      },
    },
  ],
  "end": 66,
  "errors": [],
  "kind": 0,
  "lineOffsets": [
    0,
    1,
    20,
    49,
    66,
  ],
  "start": 0,
  "text": "
[Report: MyReport]
    Title: "My Tally Report"
    Form: MyForm
",
  "tokens": [
    {
      "FullStart": 0,
      "Kind": 100,
      "Leading": [
        {
          "FullStart": 0,
          "Kind": 6,
          "Leading": [],
          "Length": 1,
          "Start": 0,
          "Text": "
",
          "Trailing": [],
        },
      ],
      "Length": 1,
      "Start": 1,
      "Text": "[",
      "Trailing": [],
    },
    {
      "FullStart": 2,
      "Kind": 600,
      "Leading": [],
      "Length": 6,
      "Start": 2,
      "Text": "Report",
      "Trailing": [],
    },
    {
      "FullStart": 8,
      "Kind": 205,
      "Leading": [],
      "Length": 1,
      "Start": 8,
      "Text": ":",
      "Trailing": [
        {
          "FullStart": 9,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 9,
          "Text": " ",
          "Trailing": [],
        },
      ],
    },
    {
      "FullStart": 10,
      "Kind": 600,
      "Leading": [],
      "Length": 8,
      "Start": 10,
      "Text": "MyReport",
      "Trailing": [],
    },
    {
      "FullStart": 18,
      "Kind": 101,
      "Leading": [],
      "Length": 1,
      "Start": 18,
      "Text": "]",
      "Trailing": [
        {
          "FullStart": 19,
          "Kind": 6,
          "Leading": [],
          "Length": 1,
          "Start": 19,
          "Text": "
",
          "Trailing": [],
        },
      ],
    },
    {
      "FullStart": 20,
      "Kind": 600,
      "Leading": [
        {
          "FullStart": 20,
          "Kind": 601,
          "Leading": [],
          "Length": 4,
          "Start": 20,
          "Text": "    ",
          "Trailing": [],
        },
      ],
      "Length": 5,
      "Start": 24,
      "Text": "Title",
      "Trailing": [],
    },
    {
      "FullStart": 29,
      "Kind": 205,
      "Leading": [],
      "Length": 1,
      "Start": 29,
      "Text": ":",
      "Trailing": [
        {
          "FullStart": 30,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 30,
          "Text": " ",
          "Trailing": [],
        },
      ],
    },
    {
      "FullStart": 31,
      "Kind": 604,
      "Leading": [],
      "Length": 17,
      "Start": 31,
      "Text": ""My Tally Report"",
      "Trailing": [
        {
          "FullStart": 48,
          "Kind": 6,
          "Leading": [],
          "Length": 1,
          "Start": 48,
          "Text": "
",
          "Trailing": [],
        },
      ],
    },
    {
      "FullStart": 49,
      "Kind": 600,
      "Leading": [
        {
          "FullStart": 49,
          "Kind": 601,
          "Leading": [],
          "Length": 4,
          "Start": 49,
          "Text": "    ",
          "Trailing": [],
        },
      ],
      "Length": 4,
      "Start": 53,
      "Text": "Form",
      "Trailing": [],
    },
    {
      "FullStart": 57,
      "Kind": 205,
      "Leading": [],
      "Length": 1,
      "Start": 57,
      "Text": ":",
      "Trailing": [
        {
          "FullStart": 58,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 58,
          "Text": " ",
          "Trailing": [],
        },
      ],
    },
    {
      "FullStart": 59,
      "Kind": 600,
      "Leading": [],
      "Length": 6,
      "Start": 59,
      "Text": "MyForm",
      "Trailing": [
        {
          "FullStart": 65,
          "Kind": 6,
          "Leading": [],
          "Length": 1,
          "Start": 65,
          "Text": "
",
          "Trailing": [],
        },
      ],
    },
    {
      "FullStart": 66,
      "Kind": 1,
      "Leading": [],
      "Length": 0,
      "Start": 66,
      "Text": "",
      "Trailing": [],
    },
  ],
}
`;

exports[`Parser Definitions Tests > Parse Definition with Spaces in Name 1`] = `
{
  "comments": [],
  "definitions": [
    {
      "attributes": [],
      "closeBracket": {
        "FullStart": 23,
        "Kind": 101,
        "Leading": [],
        "Length": 1,
        "Start": 23,
        "Text": "]",
        "Trailing": [],
      },
      "closeType": undefined,
      "colon": {
        "FullStart": 7,
        "Kind": 205,
        "Leading": [],
        "Length": 1,
        "Start": 7,
        "Text": ":",
        "Trailing": [
          {
            "FullStart": 8,
            "Kind": 601,
            "Leading": [],
            "Length": 1,
            "Start": 8,
            "Text": " ",
            "Trailing": [],
          },
        ],
      },
      "complexObjects": [],
      "directives": [],
      "end": 24,
      "isAdd": false,
      "isDelete": false,
      "isIncomplete": false,
      "isLocal": false,
      "isReplace": false,
      "kind": 1,
      "modifier": undefined,
      "name": {
        "end": 23,
        "isIncomplete": false,
        "kind": 3,
        "start": 9,
        "text": "My Report Name",
        "tokens": [
          {
            "FullStart": 9,
            "Kind": 600,
            "Leading": [],
            "Length": 2,
            "Start": 9,
            "Text": "My",
            "Trailing": [
              {
                "FullStart": 11,
                "Kind": 601,
                "Leading": [],
                "Length": 1,
                "Start": 11,
                "Text": " ",
                "Trailing": [],
              },
            ],
          },
          {
            "FullStart": 12,
            "Kind": 600,
            "Leading": [],
            "Length": 6,
            "Start": 12,
            "Text": "Report",
            "Trailing": [
              {
                "FullStart": 18,
                "Kind": 601,
                "Leading": [],
                "Length": 1,
                "Start": 18,
                "Text": " ",
                "Trailing": [],
              },
            ],
          },
          {
            "FullStart": 19,
            "Kind": 600,
            "Leading": [],
            "Length": 4,
            "Start": 19,
            "Text": "Name",
            "Trailing": [],
          },
        ],
      },
      "nameCanonical": undefined,
      "openBracket": {
        "FullStart": 0,
        "Kind": 100,
        "Leading": [],
        "Length": 1,
        "Start": 0,
        "Text": "[",
        "Trailing": [],
      },
      "start": 0,
      "statements": [],
      "type": {
        "end": 7,
        "isIncomplete": false,
        "kind": 3,
        "start": 1,
        "text": "Report",
        "tokens": [
          {
            "FullStart": 1,
            "Kind": 600,
            "Leading": [],
            "Length": 6,
            "Start": 1,
            "Text": "Report",
            "Trailing": [],
          },
        ],
      },
    },
  ],
  "end": 24,
  "errors": [],
  "kind": 0,
  "lineOffsets": [
    0,
  ],
  "start": 0,
  "text": "[Report: My Report Name]",
  "tokens": [
    {
      "FullStart": 0,
      "Kind": 100,
      "Leading": [],
      "Length": 1,
      "Start": 0,
      "Text": "[",
      "Trailing": [],
    },
    {
      "FullStart": 1,
      "Kind": 600,
      "Leading": [],
      "Length": 6,
      "Start": 1,
      "Text": "Report",
      "Trailing": [],
    },
    {
      "FullStart": 7,
      "Kind": 205,
      "Leading": [],
      "Length": 1,
      "Start": 7,
      "Text": ":",
      "Trailing": [
        {
          "FullStart": 8,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 8,
          "Text": " ",
          "Trailing": [],
        },
      ],
    },
    {
      "FullStart": 9,
      "Kind": 600,
      "Leading": [],
      "Length": 2,
      "Start": 9,
      "Text": "My",
      "Trailing": [
        {
          "FullStart": 11,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 11,
          "Text": " ",
          "Trailing": [],
        },
      ],
    },
    {
      "FullStart": 12,
      "Kind": 600,
      "Leading": [],
      "Length": 6,
      "Start": 12,
      "Text": "Report",
      "Trailing": [
        {
          "FullStart": 18,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 18,
          "Text": " ",
          "Trailing": [],
        },
      ],
    },
    {
      "FullStart": 19,
      "Kind": 600,
      "Leading": [],
      "Length": 4,
      "Start": 19,
      "Text": "Name",
      "Trailing": [],
    },
    {
      "FullStart": 23,
      "Kind": 101,
      "Leading": [],
      "Length": 1,
      "Start": 23,
      "Text": "]",
      "Trailing": [],
    },
    {
      "FullStart": 24,
      "Kind": 1,
      "Leading": [],
      "Length": 0,
      "Start": 24,
      "Text": "",
      "Trailing": [],
    },
  ],
}
`;

exports[`Parser Definitions Tests > Parse Definition with Symbols in Name (Include) 1`] = `
{
  "comments": [],
  "definitions": [
    {
      "attributes": [],
      "closeBracket": {
        "FullStart": 18,
        "Kind": 101,
        "Leading": [],
        "Length": 1,
        "Start": 18,
        "Text": "]",
        "Trailing": [],
      },
      "closeType": undefined,
      "colon": {
        "FullStart": 8,
        "Kind": 205,
        "Leading": [],
        "Length": 1,
        "Start": 8,
        "Text": ":",
        "Trailing": [
          {
            "FullStart": 9,
            "Kind": 601,
            "Leading": [],
            "Length": 1,
            "Start": 9,
            "Text": " ",
            "Trailing": [],
          },
        ],
      },
      "complexObjects": [],
      "directives": [],
      "end": 19,
      "isAdd": false,
      "isDelete": false,
      "isIncomplete": false,
      "isLocal": false,
      "isReplace": false,
      "kind": 1,
      "modifier": undefined,
      "name": {
        "end": 18,
        "isIncomplete": false,
        "kind": 3,
        "start": 10,
        "text": "file.txt",
        "tokens": [
          {
            "FullStart": 10,
            "Kind": 600,
            "Leading": [],
            "Length": 4,
            "Start": 10,
            "Text": "file",
            "Trailing": [],
          },
          {
            "FullStart": 14,
            "Kind": 212,
            "Leading": [],
            "Length": 1,
            "Start": 14,
            "Text": ".",
            "Trailing": [],
          },
          {
            "FullStart": 15,
            "Kind": 600,
            "Leading": [],
            "Length": 3,
            "Start": 15,
            "Text": "txt",
            "Trailing": [],
          },
        ],
      },
      "nameCanonical": undefined,
      "openBracket": {
        "FullStart": 0,
        "Kind": 100,
        "Leading": [],
        "Length": 1,
        "Start": 0,
        "Text": "[",
        "Trailing": [],
      },
      "start": 0,
      "statements": [],
      "type": {
        "end": 8,
        "isIncomplete": false,
        "kind": 3,
        "start": 1,
        "text": "Include",
        "tokens": [
          {
            "FullStart": 1,
            "Kind": 600,
            "Leading": [],
            "Length": 7,
            "Start": 1,
            "Text": "Include",
            "Trailing": [],
          },
        ],
      },
    },
  ],
  "end": 19,
  "errors": [],
  "kind": 0,
  "lineOffsets": [
    0,
  ],
  "start": 0,
  "text": "[Include: file.txt]",
  "tokens": [
    {
      "FullStart": 0,
      "Kind": 100,
      "Leading": [],
      "Length": 1,
      "Start": 0,
      "Text": "[",
      "Trailing": [],
    },
    {
      "FullStart": 1,
      "Kind": 600,
      "Leading": [],
      "Length": 7,
      "Start": 1,
      "Text": "Include",
      "Trailing": [],
    },
    {
      "FullStart": 8,
      "Kind": 205,
      "Leading": [],
      "Length": 1,
      "Start": 8,
      "Text": ":",
      "Trailing": [
        {
          "FullStart": 9,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 9,
          "Text": " ",
          "Trailing": [],
        },
      ],
    },
    {
      "FullStart": 10,
      "Kind": 600,
      "Leading": [],
      "Length": 4,
      "Start": 10,
      "Text": "file",
      "Trailing": [],
    },
    {
      "FullStart": 14,
      "Kind": 212,
      "Leading": [],
      "Length": 1,
      "Start": 14,
      "Text": ".",
      "Trailing": [],
    },
    {
      "FullStart": 15,
      "Kind": 600,
      "Leading": [],
      "Length": 3,
      "Start": 15,
      "Text": "txt",
      "Trailing": [],
    },
    {
      "FullStart": 18,
      "Kind": 101,
      "Leading": [],
      "Length": 1,
      "Start": 18,
      "Text": "]",
      "Trailing": [],
    },
    {
      "FullStart": 19,
      "Kind": 1,
      "Leading": [],
      "Length": 0,
      "Start": 19,
      "Text": "",
      "Trailing": [],
    },
  ],
}
`;

exports[`Parser Definitions Tests > Parse Menu Definition with Numbers and Decimals 1`] = `
{
  "comments": [],
  "definitions": [
    {
      "attributes": [
        {
          "closeName": undefined,
          "colon": {
            "FullStart": 40,
            "Kind": 205,
            "Leading": [],
            "Length": 1,
            "Start": 40,
            "Text": ":",
            "Trailing": [
              {
                "FullStart": 41,
                "Kind": 601,
                "Leading": [],
                "Length": 1,
                "Start": 41,
                "Text": " ",
                "Trailing": [],
              },
            ],
          },
          "end": 75,
          "isAdd": false,
          "isDelete": false,
          "isIncomplete": false,
          "isLocal": false,
          "isReplace": false,
          "kind": 2,
          "name": {
            "end": 38,
            "isIncomplete": false,
            "kind": 3,
            "start": 32,
            "text": "Indent",
            "tokens": [
              {
                "FullStart": 30,
                "Kind": 600,
                "Leading": [
                  {
                    "FullStart": 30,
                    "Kind": 6,
                    "Leading": [],
                    "Length": 1,
                    "Start": 30,
                    "Text": "
",
                    "Trailing": [],
                  },
                  {
                    "FullStart": 31,
                    "Kind": 601,
                    "Leading": [],
                    "Length": 1,
                    "Start": 31,
                    "Text": "	",
                    "Trailing": [],
                  },
                ],
                "Length": 6,
                "Start": 32,
                "Text": "Indent",
                "Trailing": [
                  {
                    "FullStart": 38,
                    "Kind": 601,
                    "Leading": [],
                    "Length": 2,
                    "Start": 38,
                    "Text": "		",
                    "Trailing": [],
                  },
                ],
              },
            ],
          },
          "start": 32,
          "value": [
            {
              "end": 75,
              "kind": 4,
              "start": 42,
              "token": {
                "FullStart": 42,
                "Kind": 604,
                "Leading": [],
                "Length": 33,
                "Start": 42,
                "Text": ""Dynamic Evaluation in Functions"",
                "Trailing": [
                  {
                    "FullStart": 75,
                    "Kind": 6,
                    "Leading": [],
                    "Length": 1,
                    "Start": 75,
                    "Text": "
",
                    "Trailing": [],
                  },
                ],
              },
              "value": ""Dynamic Evaluation in Functions"",
            },
          ],
        },
        {
          "closeName": undefined,
          "colon": {
            "FullStart": 83,
            "Kind": 205,
            "Leading": [],
            "Length": 1,
            "Start": 83,
            "Text": ":",
            "Trailing": [
              {
                "FullStart": 84,
                "Kind": 601,
                "Leading": [],
                "Length": 1,
                "Start": 84,
                "Text": " ",
                "Trailing": [],
              },
            ],
          },
          "end": 90,
          "isAdd": false,
          "isDelete": false,
          "isIncomplete": false,
          "isLocal": false,
          "isReplace": false,
          "kind": 2,
          "name": {
            "end": 81,
            "isIncomplete": false,
            "kind": 3,
            "start": 77,
            "text": "Item",
            "tokens": [
              {
                "FullStart": 76,
                "Kind": 600,
                "Leading": [
                  {
                    "FullStart": 76,
                    "Kind": 601,
                    "Leading": [],
                    "Length": 1,
                    "Start": 76,
                    "Text": "	",
                    "Trailing": [],
                  },
                ],
                "Length": 4,
                "Start": 77,
                "Text": "Item",
                "Trailing": [
                  {
                    "FullStart": 81,
                    "Kind": 601,
                    "Leading": [],
                    "Length": 2,
                    "Start": 81,
                    "Text": "		",
                    "Trailing": [],
                  },
                ],
              },
            ],
          },
          "start": 77,
          "value": [
            {
              "end": 90,
              "isIncomplete": false,
              "kind": 3,
              "start": 85,
              "text": "Blank",
              "tokens": [
                {
                  "FullStart": 85,
                  "Kind": 600,
                  "Leading": [],
                  "Length": 5,
                  "Start": 85,
                  "Text": "Blank",
                  "Trailing": [
                    {
                      "FullStart": 90,
                      "Kind": 6,
                      "Leading": [],
                      "Length": 1,
                      "Start": 90,
                      "Text": "
",
                      "Trailing": [],
                    },
                  ],
                },
              ],
            },
          ],
        },
        {
          "closeName": undefined,
          "colon": {
            "FullStart": 101,
            "Kind": 205,
            "Leading": [],
            "Length": 1,
            "Start": 101,
            "Text": ":",
            "Trailing": [
              {
                "FullStart": 102,
                "Kind": 601,
                "Leading": [],
                "Length": 1,
                "Start": 102,
                "Text": " ",
                "Trailing": [],
              },
            ],
          },
          "end": 119,
          "isAdd": false,
          "isDelete": false,
          "isIncomplete": false,
          "isLocal": false,
          "isReplace": false,
          "kind": 2,
          "name": {
            "end": 100,
            "isIncomplete": false,
            "kind": 3,
            "start": 92,
            "text": "Key Item",
            "tokens": [
              {
                "FullStart": 91,
                "Kind": 600,
                "Leading": [
                  {
                    "FullStart": 91,
                    "Kind": 601,
                    "Leading": [],
                    "Length": 1,
                    "Start": 91,
                    "Text": "	",
                    "Trailing": [],
                  },
                ],
                "Length": 3,
                "Start": 92,
                "Text": "Key",
                "Trailing": [
                  {
                    "FullStart": 95,
                    "Kind": 601,
                    "Leading": [],
                    "Length": 1,
                    "Start": 95,
                    "Text": " ",
                    "Trailing": [],
                  },
                ],
              },
              {
                "FullStart": 96,
                "Kind": 600,
                "Leading": [],
                "Length": 4,
                "Start": 96,
                "Text": "Item",
                "Trailing": [
                  {
                    "FullStart": 100,
                    "Kind": 601,
                    "Leading": [],
                    "Length": 1,
                    "Start": 100,
                    "Text": "	",
                    "Trailing": [],
                  },
                ],
              },
            ],
          },
          "start": 92,
          "value": [
            {
              "end": 119,
              "kind": 4,
              "start": 103,
              "token": {
                "FullStart": 103,
                "Kind": 604,
                "Leading": [],
                "Length": 16,
                "Start": 103,
                "Text": ""Dynamic Action"",
                "Trailing": [
                  {
                    "FullStart": 119,
                    "Kind": 601,
                    "Leading": [],
                    "Length": 3,
                    "Start": 119,
                    "Text": " 		",
                    "Trailing": [],
                  },
                ],
              },
              "value": ""Dynamic Action"",
            },
          ],
        },
      ],
      "closeBracket": {
        "FullStart": 28,
        "Kind": 101,
        "Leading": [],
        "Length": 1,
        "Start": 28,
        "Text": "]",
        "Trailing": [
          {
            "FullStart": 29,
            "Kind": 6,
            "Leading": [],
            "Length": 1,
            "Start": 29,
            "Text": "
",
            "Trailing": [],
          },
        ],
      },
      "closeType": undefined,
      "colon": {
        "FullStart": 5,
        "Kind": 205,
        "Leading": [],
        "Length": 1,
        "Start": 5,
        "Text": ":",
        "Trailing": [
          {
            "FullStart": 6,
            "Kind": 601,
            "Leading": [],
            "Length": 1,
            "Start": 6,
            "Text": " ",
            "Trailing": [],
          },
        ],
      },
      "complexObjects": [],
      "directives": [],
      "end": 119,
      "isAdd": false,
      "isDelete": false,
      "isIncomplete": false,
      "isLocal": false,
      "isReplace": false,
      "kind": 1,
      "modifier": undefined,
      "name": {
        "end": 28,
        "isIncomplete": false,
        "kind": 3,
        "start": 7,
        "text": "Whats New in Rel 1.52",
        "tokens": [
          {
            "FullStart": 7,
            "Kind": 600,
            "Leading": [],
            "Length": 5,
            "Start": 7,
            "Text": "Whats",
            "Trailing": [
              {
                "FullStart": 12,
                "Kind": 601,
                "Leading": [],
                "Length": 1,
                "Start": 12,
                "Text": " ",
                "Trailing": [],
              },
            ],
          },
          {
            "FullStart": 13,
            "Kind": 600,
            "Leading": [],
            "Length": 3,
            "Start": 13,
            "Text": "New",
            "Trailing": [
              {
                "FullStart": 16,
                "Kind": 601,
                "Leading": [],
                "Length": 1,
                "Start": 16,
                "Text": " ",
                "Trailing": [],
              },
            ],
          },
          {
            "FullStart": 17,
            "Kind": 503,
            "Leading": [],
            "Length": 2,
            "Start": 17,
            "Text": "in",
            "Trailing": [
              {
                "FullStart": 19,
                "Kind": 601,
                "Leading": [],
                "Length": 1,
                "Start": 19,
                "Text": " ",
                "Trailing": [],
              },
            ],
          },
          {
            "FullStart": 20,
            "Kind": 600,
            "Leading": [],
            "Length": 3,
            "Start": 20,
            "Text": "Rel",
            "Trailing": [
              {
                "FullStart": 23,
                "Kind": 601,
                "Leading": [],
                "Length": 1,
                "Start": 23,
                "Text": " ",
                "Trailing": [],
              },
            ],
          },
          {
            "FullStart": 24,
            "Kind": 603,
            "Leading": [],
            "Length": 4,
            "Start": 24,
            "Text": "1.52",
            "Trailing": [],
          },
        ],
      },
      "nameCanonical": undefined,
      "openBracket": {
        "FullStart": 0,
        "Kind": 100,
        "Leading": [],
        "Length": 1,
        "Start": 0,
        "Text": "[",
        "Trailing": [],
      },
      "start": 0,
      "statements": [],
      "type": {
        "end": 5,
        "isIncomplete": false,
        "kind": 3,
        "start": 1,
        "text": "Menu",
        "tokens": [
          {
            "FullStart": 1,
            "Kind": 600,
            "Leading": [],
            "Length": 4,
            "Start": 1,
            "Text": "Menu",
            "Trailing": [],
          },
        ],
      },
    },
  ],
  "end": 122,
  "errors": [],
  "kind": 0,
  "lineOffsets": [
    0,
    30,
    31,
    76,
    91,
  ],
  "start": 0,
  "text": "[Menu: Whats New in Rel 1.52]

	Indent		: "Dynamic Evaluation in Functions"
	Item		: Blank
	Key Item	: "Dynamic Action" 		",
  "tokens": [
    {
      "FullStart": 0,
      "Kind": 100,
      "Leading": [],
      "Length": 1,
      "Start": 0,
      "Text": "[",
      "Trailing": [],
    },
    {
      "FullStart": 1,
      "Kind": 600,
      "Leading": [],
      "Length": 4,
      "Start": 1,
      "Text": "Menu",
      "Trailing": [],
    },
    {
      "FullStart": 5,
      "Kind": 205,
      "Leading": [],
      "Length": 1,
      "Start": 5,
      "Text": ":",
      "Trailing": [
        {
          "FullStart": 6,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 6,
          "Text": " ",
          "Trailing": [],
        },
      ],
    },
    {
      "FullStart": 7,
      "Kind": 600,
      "Leading": [],
      "Length": 5,
      "Start": 7,
      "Text": "Whats",
      "Trailing": [
        {
          "FullStart": 12,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 12,
          "Text": " ",
          "Trailing": [],
        },
      ],
    },
    {
      "FullStart": 13,
      "Kind": 600,
      "Leading": [],
      "Length": 3,
      "Start": 13,
      "Text": "New",
      "Trailing": [
        {
          "FullStart": 16,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 16,
          "Text": " ",
          "Trailing": [],
        },
      ],
    },
    {
      "FullStart": 17,
      "Kind": 503,
      "Leading": [],
      "Length": 2,
      "Start": 17,
      "Text": "in",
      "Trailing": [
        {
          "FullStart": 19,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 19,
          "Text": " ",
          "Trailing": [],
        },
      ],
    },
    {
      "FullStart": 20,
      "Kind": 600,
      "Leading": [],
      "Length": 3,
      "Start": 20,
      "Text": "Rel",
      "Trailing": [
        {
          "FullStart": 23,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 23,
          "Text": " ",
          "Trailing": [],
        },
      ],
    },
    {
      "FullStart": 24,
      "Kind": 603,
      "Leading": [],
      "Length": 4,
      "Start": 24,
      "Text": "1.52",
      "Trailing": [],
    },
    {
      "FullStart": 28,
      "Kind": 101,
      "Leading": [],
      "Length": 1,
      "Start": 28,
      "Text": "]",
      "Trailing": [
        {
          "FullStart": 29,
          "Kind": 6,
          "Leading": [],
          "Length": 1,
          "Start": 29,
          "Text": "
",
          "Trailing": [],
        },
      ],
    },
    {
      "FullStart": 30,
      "Kind": 600,
      "Leading": [
        {
          "FullStart": 30,
          "Kind": 6,
          "Leading": [],
          "Length": 1,
          "Start": 30,
          "Text": "
",
          "Trailing": [],
        },
        {
          "FullStart": 31,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 31,
          "Text": "	",
          "Trailing": [],
        },
      ],
      "Length": 6,
      "Start": 32,
      "Text": "Indent",
      "Trailing": [
        {
          "FullStart": 38,
          "Kind": 601,
          "Leading": [],
          "Length": 2,
          "Start": 38,
          "Text": "		",
          "Trailing": [],
        },
      ],
    },
    {
      "FullStart": 40,
      "Kind": 205,
      "Leading": [],
      "Length": 1,
      "Start": 40,
      "Text": ":",
      "Trailing": [
        {
          "FullStart": 41,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 41,
          "Text": " ",
          "Trailing": [],
        },
      ],
    },
    {
      "FullStart": 42,
      "Kind": 604,
      "Leading": [],
      "Length": 33,
      "Start": 42,
      "Text": ""Dynamic Evaluation in Functions"",
      "Trailing": [
        {
          "FullStart": 75,
          "Kind": 6,
          "Leading": [],
          "Length": 1,
          "Start": 75,
          "Text": "
",
          "Trailing": [],
        },
      ],
    },
    {
      "FullStart": 76,
      "Kind": 600,
      "Leading": [
        {
          "FullStart": 76,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 76,
          "Text": "	",
          "Trailing": [],
        },
      ],
      "Length": 4,
      "Start": 77,
      "Text": "Item",
      "Trailing": [
        {
          "FullStart": 81,
          "Kind": 601,
          "Leading": [],
          "Length": 2,
          "Start": 81,
          "Text": "		",
          "Trailing": [],
        },
      ],
    },
    {
      "FullStart": 83,
      "Kind": 205,
      "Leading": [],
      "Length": 1,
      "Start": 83,
      "Text": ":",
      "Trailing": [
        {
          "FullStart": 84,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 84,
          "Text": " ",
          "Trailing": [],
        },
      ],
    },
    {
      "FullStart": 85,
      "Kind": 600,
      "Leading": [],
      "Length": 5,
      "Start": 85,
      "Text": "Blank",
      "Trailing": [
        {
          "FullStart": 90,
          "Kind": 6,
          "Leading": [],
          "Length": 1,
          "Start": 90,
          "Text": "
",
          "Trailing": [],
        },
      ],
    },
    {
      "FullStart": 91,
      "Kind": 600,
      "Leading": [
        {
          "FullStart": 91,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 91,
          "Text": "	",
          "Trailing": [],
        },
      ],
      "Length": 3,
      "Start": 92,
      "Text": "Key",
      "Trailing": [
        {
          "FullStart": 95,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 95,
          "Text": " ",
          "Trailing": [],
        },
      ],
    },
    {
      "FullStart": 96,
      "Kind": 600,
      "Leading": [],
      "Length": 4,
      "Start": 96,
      "Text": "Item",
      "Trailing": [
        {
          "FullStart": 100,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 100,
          "Text": "	",
          "Trailing": [],
        },
      ],
    },
    {
      "FullStart": 101,
      "Kind": 205,
      "Leading": [],
      "Length": 1,
      "Start": 101,
      "Text": ":",
      "Trailing": [
        {
          "FullStart": 102,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 102,
          "Text": " ",
          "Trailing": [],
        },
      ],
    },
    {
      "FullStart": 103,
      "Kind": 604,
      "Leading": [],
      "Length": 16,
      "Start": 103,
      "Text": ""Dynamic Action"",
      "Trailing": [
        {
          "FullStart": 119,
          "Kind": 601,
          "Leading": [],
          "Length": 3,
          "Start": 119,
          "Text": " 		",
          "Trailing": [],
        },
      ],
    },
    {
      "FullStart": 122,
      "Kind": 1,
      "Leading": [],
      "Length": 0,
      "Start": 122,
      "Text": "",
      "Trailing": [],
    },
  ],
}
`;
